--- a/aplikacija_za_recepte/src/styles/FeaturedRecipes.css
+++ b/aplikacija_za_recepte/src/styles/FeaturedRecipes.css
@@ -25,13 +25,14 @@
     position: relative;
     background: var(--secondary-color);
     padding: 1em;
-    border-radius: 15px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 4px 0px #00000040;
   }
   
   .frecipe-cards .card img {
     object-fit: cover;
     width: 100%;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 17px;
   }
   
   .frecipe-cards .card h5 {
