--- a/aplikacija_za_recepte/src/index.css
+++ b/aplikacija_za_recepte/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap');
 
 /* GLOBAL STYLES */
 
@@ -14,9 +15,16 @@
   font-family: 'Amiko', sans-serif;
   font-style: normal;
 }
+
 .lobsterFont {
   font-family: 'Lobster', sans-serif;
   font-weight: 400;
+  font-style: normal;
+}
+
+.balooFont {
+  font-family: 'Baloo 2', sans-serif;
+  font-optical-sizing: auto;
   font-style: normal;
 }
 
