deveti.commit-about us

--- a/aplikacija_za_recepte/src/index.css
+++ b/aplikacija_za_recepte/src/index.css
@@ -14,6 +14,8 @@
   box-sizing: border-box;
   font-family: 'Amiko', sans-serif;
   font-style: normal;
+  margin: 0;
+  padding: 0;
 }
 
 .lobsterFont {
