--- a/aplikacija_za_recepte/src/styles/Hero.css
+++ b/aplikacija_za_recepte/src/styles/Hero.css
@@ -70,6 +70,10 @@
     cursor: pointer;
   }
   
+  .hero .btn:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  }
+  
   @media screen and (max-width: 1560px) {
     .hero h2 {
       font-size: 55px;
